@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha4 
+	- Added User and Manager levels to Localplay, determines what the
+		user in question can do
+	- Moved Newest * to statistics page
 	- Database Update, removed useless config options and tweaked a few others
 	- Fixed last of the missing MPD functionality (Volume & Playlist Clear)
 	- Fixed HTTPQ and improved parsing for urls from MPD & HTTPQ
